# Vladimirov-CPP-course

./: .gitignore
.github/workflows/: workflow.yml
Cache/: CMakeLists.txt  Cache.cpp  Makefile  README.md  main.cpp
Cache/include/: IdealCache.hpp  LFUCache.hpp
Cache/test/: CacheTest.cpp  IdealCacheTest.cpp  LFUCacheTest.cpp
Cache/testIdeal/: IdealCacheTest.cpp
Cache/testLFU/: LFUCacheTest.cpp
Matrix/: .gitignore  CMakeLists.txt  Matrix.cpp  README.md
Matrix/include/: Matrix.hpp  Utils.hpp
Matrix/test/: MatrixTest.cpp  TestGen.py  config.json
OpenCL/: .gitignore  CMakeLists.txt  OpenCL.cpp  README.md
OpenCL/include/: CpuBitonicSort.hpp  GpuBitonicSort.hpp  Utils.hpp
OpenCL/res/: compare.txt
OpenCL/src/: BitonicInt.cl  GpuBitonicSort.cpp
OpenCL/test/: Compare.py  OpenCLTest.cpp  TestGen.py  config.json  run.sh
ParaCL/: .gitignore  CMakeLists.txt  ParaCL.cpp  README.md
ParaCL/.github/workflows/: workflow.yml
ParaCL/include/: Manager.hpp  Utils.hpp
ParaCL/include/backend/: Constants.hpp  Image.hpp  Instructions.hpp  NodeCodegen.hpp  NodeCodegenerator.hpp  StackFrame.hpp  Utils.hpp  VirtualMachine.hpp  main.cpp
ParaCL/include/frontend/: AST.hpp  Driver.hpp  Errors.hpp  INode.hpp  Lexer.hpp  NodeAnalyzer.hpp  NodeCopier.hpp  NodeDecoder.hpp  NodeDumper.hpp  NodeGeneratorCL.hpp  NodeGeneratorCPP.hpp  NodeGeneratorDot.hpp  NodeSemanticAnalyzer.hpp  NodeVisitor.hpp  Operators.hpp  SymTable.hpp
ParaCL/res/: dump_ex1.dot  dump_ex2.dot
ParaCL/src/: DumpAST.cpp
ParaCL/src/backend/: Instructions.cpp  VM.cpp
ParaCL/src/frontend/: AST.cpp  Lexer.l  Parser.y
ParaCL/test/: ParaCLTest.cpp  VMTest.cpp
ParaCL/tests/: break.cl  ex1.cl  ex2.cl  expr.cl  if.cl  ifElse.cl  while.cl
Tree/: .gitignore  CMakeLists.txt  README.md  Tree.cpp
Tree/include/: Tree.hpp  Utils.hpp
Tree/test/: Compare.py  MyDistance.cpp  StdDistance.cpp  TestGen.py  TreeTest.cpp  compare.txt  config.json
Triangles/: .gitignore  CMakeLists.txt  README.md  Triangles.cpp
Triangles/.github/workflows/: workflow.yml
Triangles/include/: BoundingBox.hpp  Config.hpp  Geometry.hpp  Intersections.hpp  OctroTree.hpp  Segment.hpp  Triangle.hpp  Utils.hpp  Vector.hpp
Triangles/test/: GeometryTest.cpp  ProblemTest.cpp  TrianglesTest.cpp
